--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
   <!-- Hero Image -->
   <div class="landing">
     <div class="home-wrap">
-      div.home-inner
+      <div class="home-inner"></div>
     </div>
   </div>
 
