Hero image now full screen

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <!-- Navigation -->
-  <header class="sticky-top">   
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <div id="home">
+    <!-- Start Navigation -->
+    <nav class="navbar navbar-expand-md navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" id="logo" alt="Dreamlink Studio Logo" />
@@ -35,7 +35,7 @@
         <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-  
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active px-3">
@@ -54,25 +54,22 @@
         </div>
       </div>
     </nav>
-  </header>
+    <!-- End Navigation -->
 
-  <!-- Hero Image -->
-  <div class="landing">
-    <div class="home-wrap">
-      <div class="home-inner"></div>
-    </div>
-  </div>
-
-  <!--main>
-    <div class="jumbotron-fluid d-flex align-items-center">
-      <div class="container text-center">
-        <h1 class="display-4 font-weight-bold">Dreamlink Studio</h1>
-        <p class="lead">Linking our dreams with reality</p>
+    <!-- Start hero image -->
+    <div class="landing">
+      <div class="home-wrap">
+        <div class="home-inner"></div>
       </div>
     </div>
-      
+
+    <div class="caption text-center">
+      <h1 class="display-4 font-weight-bold">Dreamlink Studio</h1>
+      <h3>Linking our dreams with reality</h3>
     </div>
-  </main-->
+    <!-- End hero image -->
+
+  </div>
 
   <!-- What we do -->
   <section id="what-we-do">
