Made navbar shrink

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" />
 
   <!-- Page JS -->
+  <script src="js/nav.js"></script>
   <script src="js/script.js"></script>
   <!-- Page Styles -->
   <link rel="stylesheet" href="css/fixed.css" />
@@ -25,7 +26,7 @@
   <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-  <div id="home">
+  <main id="home">
     <!-- Start Navigation -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
       <div class="container-fluid">
@@ -69,7 +70,7 @@
     </div>
     <!-- End hero image -->
 
-  </div>
+  </main>
 
   <!-- What we do -->
   <section id="what-we-do">
