--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <img src="images/logo.png" id="logo" alt="Dreamlink Studio Logo" />
         </a>
         <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
-          <span class="navbar-toggler-icon"></span>
+          <span class="text-white navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
