Added flip cards

--- a/public/index.html
+++ b/public/index.html
@@ -153,64 +153,124 @@
 
       <!-- Our team -->
       <div class="owl-carousel owl-theme">
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <!-- Slide one (4 cards)  -->
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+
+        <!-- Slide two (4 cards)  -->
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
-        <div class="item">
-          <div class="member-info">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
-            <h4>John Doe</h4>
-            <p>Developer</p>
+        <div class="item flip-card">
+          <div class="member-info flip-card-inner">
+            <div class="flip-card-front">
+              <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+              <h4>John Doe</h4>
+              <p>Developer</p>
+            </div>
+            <div class="flip-card-back">
+              <h1>John Doe</h1>
+              <p>Game Developer and Designer</p>
+              <button class="btn btn-md btn-outline-light">View More</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    <hr class="sep"/>
   </section>
 </body>
 </html>
