Product carousel (with jump bug)

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
   </main>
 
   <!-- What we do -->
-  <section id="what-we-do">
+  <section classs="what-we-do">
     <h1 class="display-5 text-center font-weight-light text-capitalize">What we do</h1>
     <div class="container text-center mt-4">
       <p>We deliver and produce high qualitty applications. Our focus is on games but we plan on expanding our applications to cover general purpose software. Our team focuse on three core values, quality, creativity and innovation. These core ideas act as the core building blocks for our applications and software. This allows our applications and software unique, and unlike any other technologies out there.</p>  
@@ -142,7 +142,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="who-we-are">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Who we are</h1>
     <div class="container text-center mt-4">
       <p>We are a group of passionate IT professionals who ... Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Scroll through the slider below to meet the team, and see how each individual member has helped contribute to where we are today.</p>  
@@ -151,8 +151,8 @@
     <div class="container">
       <h3 class="text-center text-capitalize mt-3 mb-5">Our team</h3>
 
-      <!-- Our team -->
-      <div class="owl-carousel owl-theme">
+      <!-- Our team carousel -->
+      <div class="owl-profile-carousel owl-carousel owl-theme">
         <!-- Slide one (4 cards)  -->
         <div class="item flip-card">
           <div class="member-info flip-card-inner">
@@ -271,6 +271,64 @@
       </div>
     </div>
     <hr class="sep"/>
+  </section>
+
+  <section class="our-products">
+    <h1 class="display-5 text-center font-weight-light text-capitalize">Our Products</h1>
+    <!-- Our Products -->
+    <div class="container">
+      <div class="owl-products-carousel owl-carousel owl-theme">
+        <div class="item">
+          <div class="product-info card shadow">
+            <div class="img-wrapper">
+              <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Zombie Runner</h5>
+              <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="product-info card shadow">
+            <div class="img-wrapper">
+              <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Zombie Runner</h5>
+              <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="product-info card shadow">
+            <div class="img-wrapper">
+              <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Zombie Runner</h5>
+              <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="product-info card shadow">
+            <div class="img-wrapper">
+              <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Zombie Runner</h5>
+              <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+            </div>
+          </div>
+        </div>
+   
+      </div>
+    </div>
   </section>
 </body>
 </html>
