Added animation on scroll - temp fix for products

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
   <link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" />
   <script src="libs/owl/dist/owl.carousel.min.js"></script>
 
+  <!-- AOS (Scroll Animation -->
+  <!--link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script-->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="libs/scroll-animate/scroll-config.js"></script>
+
   <!-- Page JS -->
   <script src="js/nav.js"></script>
   <script src="js/carousel.js"></script>
@@ -81,6 +88,8 @@
 
   </main>
 
+
+
   <!-- What we do -->
   <section classs="what-we-do">
     <h1 class="display-5 text-center font-weight-light text-capitalize">What we do</h1>
@@ -91,7 +100,7 @@
     <div class="container-fluid p-5 mt-3">
       <div class="row">
         <div class="col-lg-4">
-          <div class="container-fluid">
+          <div class="container-fluid" data-aos="fade-right" data-aos-delay="100">
             <div class="row">
               <div class="col-auto">
                 <div class="circle-icon">
@@ -108,7 +117,7 @@
 
         
         <div class="col-lg-4">
-          <div class="container-fluid">
+          <div class="container-fluid" data-aos="fade-right" data-aos-delay="400">
             <div class="row">
               <div class="col-auto">
                 <div class="circle-icon">
@@ -124,7 +133,7 @@
         </div>
 
         <div class="col-lg-4">
-          <div class="container-fluid">
+          <div class="container-fluid" data-aos="fade-right" data-aos-delay="700">
             <div class="row">
               <div class="col-auto">
                 <div class="circle-icon">
@@ -154,7 +163,7 @@
       <!-- Our team carousel -->
       <div class="owl-profile-carousel owl-carousel owl-theme">
         <!-- Slide one (4 cards)  -->
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="100" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -168,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="300" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -182,7 +191,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -196,7 +205,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="700" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -212,7 +221,7 @@
         </div>
 
         <!-- Slide two (4 cards)  -->
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="900" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -226,7 +235,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1100" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -240,7 +249,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1300" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
@@ -254,7 +263,7 @@
             </div>
           </div>
         </div>
-        <div class="item flip-card">
+        <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1500" data-aos-easing="ease-out-back">
           <div class="member-info flip-card-inner">
             <div class="flip-card-front">
               <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
