Fixed profile card background.

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <!--link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script-->
   <script src="libs/scroll-animate/scroll-config.js"></script>
 
   <!-- Page JS -->
