--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">  
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   
   <!-- Fontawesome -->
@@ -341,6 +340,38 @@
       </div>
     </div>
   </section>
+
+  <section class="contact-us">
+    <h1 class="display-5 text-center font-weight-light text-capitalize">Get In touch</h1>
+    <div class="container pt-4">
+      <form class="form" name="contactForm">
+        <div class="form-row">
+          <div class="form-group col-sm-6 py-0">
+            <label class="sr-only" for="input-first-name">First name</label>
+            <input class="form-control" id="input-first-name" type="text" placeholder="First Name" />
+          </div>
+          <div class="form-group col-sm-6 py-0">
+            <label class="sr-only" for="input-last-name">Last name</label>
+            <input class="form-control" id="input-last-name" type="text" placeholder="Last Name" />
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <label class="sr-only" for="input-email">Email address</label>
+          <input type="email" class="form-control" id="input-email" placeholder="Enter email" />
+        </div>
+
+        <div class="form-group">
+          <label class="sr-only" for="email-body">Email body message</label>
+          <textarea class="form-control no-resize" id="email-body" placeholder="Message" rows="4"></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-outline-dark btn-block">Send</button>
+        </div>
+      </form>
+    </div>
+  </section>
+  
 </body>
 </html>
 
