Added grammarly extension scroll bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -363,7 +363,7 @@
 
         <div class="form-group">
           <label class="sr-only" for="email-body">Email body message</label>
-          <textarea class="form-control no-resize" id="email-body" placeholder="Message" rows="4"></textarea>
+          <textarea class="form-control no-resize" data-gramm_editor="false" id="email-body" placeholder="Message" rows="4"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-outline-dark btn-block">Send</button>
