--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,9 @@
   <!-- Page JS -->
   <script src="js/nav.js"></script>
   <script src="js/carousel.js"></script>
+  <script src="js/email.js"></script>
   <script src="js/script.js"></script>
-
+  
   <!-- Page Styles -->
   <link rel="stylesheet" href="css/fixed.css" />
   <link rel="stylesheet" href="css/main.css" />
@@ -344,26 +345,26 @@
   <section class="contact-us">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Get In touch</h1>
     <div class="container pt-4">
-      <form class="form" name="contactForm">
+      <form class="form" id="contact-form" name="contact-form">
         <div class="form-row">
           <div class="form-group col-sm-6 py-0">
             <label class="sr-only" for="input-first-name">First name</label>
-            <input class="form-control" id="input-first-name" type="text" placeholder="First Name" />
+            <input class="form-control" name="firstName" id="input-first-name" type="text" placeholder="First Name" />
           </div>
           <div class="form-group col-sm-6 py-0">
             <label class="sr-only" for="input-last-name">Last name</label>
-            <input class="form-control" id="input-last-name" type="text" placeholder="Last Name" />
+            <input class="form-control" name="lastName" id="input-last-name" type="text" placeholder="Last Name" />
           </div>
         </div>
         
         <div class="form-group">
           <label class="sr-only" for="input-email">Email address</label>
-          <input type="email" class="form-control" id="input-email" placeholder="Enter email" />
+          <input type="email" name="email" class="form-control" id="input-email" placeholder="Enter email" />
         </div>
 
         <div class="form-group">
           <label class="sr-only" for="email-body">Email body message</label>
-          <textarea class="form-control no-resize" data-gramm_editor="false" id="email-body" placeholder="Message" rows="4"></textarea>
+          <textarea class="form-control no-resize" name="emailBody" data-gramm_editor="false" id="email-body" placeholder="Message" rows="4"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-outline-dark btn-block">Send</button>
