Added infinite scroll to game cards

--- a/public/index.html
+++ b/public/index.html
@@ -127,66 +127,16 @@
             <h3 class="font-weight-bold text-capitalize pt-4">Innovation</h3>
           </div>
         </div>
-
-        <!--div class="col-lg-4">
-          <div class="container-fluid value-box" data-aos="fade-right" data-aos-delay="100">
-            <div class="row">
-              <div class="col-auto">
-                <div class="circle-icon">
-                  <i class="fas fa-check fa-fw"></i>
-                </div>
-              </div>
-              <div class="col">
-                <h3 class="font-weight-bold text-capitalize">Quality</h3>
-                <p>We strive to produce high-quality applications. All our applications start from the ground up... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
-              </div>
-            </div>
-          </div>
-        </div-->
-
-        
-        <!--div class="col-lg-4">
-          <div class="container-fluid value-box" data-aos="fade-right" data-aos-delay="400">
-            <div class="row">
-              <div class="col-auto">
-                <div class="circle-icon">
-                  <i class="fas fa-cloud fa-fw"></i>
-                </div>
-              </div>
-              <div class="col">
-                <h3 class="font-weight-bold text-capitalize">Creativity</h3>
-                <p>Our applications take a unique take on modern day software and game development.... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
-              </div>
-            </div>
-          </div>
-        </div-->
-
-        <!--div class="col-lg-4">
-          <div class="container-fluid value-box" data-aos="fade-right" data-aos-delay="700">
-            <div class="row">
-              <div class="col-auto">
-                <div class="circle-icon">
-                  <i class="fas fa-lightbulb fa-fw"></i>
-                </div>
-              </div>
-              <div class="col">
-                <h3 class="font-weight-bold text-capitalize">Innovation</h3>
-                <p>We try and think outside the box, using the most mordern technologies... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque.</p>
-              </div>
-            </div>
-          </div>
-        </div-->
       </div>
     </div>
   </section>
 
   <section class="who-we-are">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Who we are</h1>
-    <div class="container text-center mt-4">
+    <!--div class="container text-center mt-4">
       <p>We are a group of passionate IT professionals who ... Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Scroll through the slider below to meet the team, and see how each individual member has helped contribute to where we are today.</p>  
-    </div>
-    <hr class="sep" />
-    <div class="container">
+    </div-->
+    <div class="container pt-4">
       <h3 class="text-center text-capitalize mt-3 mb-5">Our team</h3>
 
       <!-- Our team carousel -->
@@ -316,7 +266,7 @@
     <!-- Our Products -->
     <div class="container">
       <div class="owl-products-carousel owl-carousel owl-theme">
-        <div class="item" data-aos="flip-left" data-aos-duration="800">
+        <div class="item" data-aos="flip-left-foo" data-aos-duration="800">
           <div class="product-info card shadow">
             <div class="img-wrapper">
               <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
@@ -328,7 +278,7 @@
             </div>
           </div>
         </div>
-        <div class="item" data-aos="flip-left" data-aos-duration="800" data-aos-offset="200">
+        <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="200">
           <div class="product-info card shadow">
             <div class="img-wrapper">
               <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
@@ -340,7 +290,7 @@
             </div>
           </div>
         </div>
-        <div class="item" data-aos="flip-left" data-aos-duration="800" data-aos-offset="400">
+        <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="400">
           <div class="product-info card shadow">
             <div class="img-wrapper">
               <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
@@ -352,7 +302,7 @@
             </div>
           </div>
         </div>
-        <div class="item" data-aos="flip-left" data-aos-duration="800" data-aos-offset="600">
+        <div class="item" data-aos="flip-left-foo" data-aos-duration="800" data-aos-offset="600">
           <div class="product-info card shadow">
             <div class="img-wrapper">
               <img class="card-img-top" src="images/products/zombie-runner.png" alt="Zombie runner product">
