--- a/public/index.html
+++ b/public/index.html
@@ -274,7 +274,7 @@
             <div class="card-body">
               <h5 class="card-title">Zombie Runner</h5>
               <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
             </div>
           </div>
         </div>
@@ -286,7 +286,7 @@
             <div class="card-body">
               <h5 class="card-title">Zombie Runner</h5>
               <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
             </div>
           </div>
         </div>
@@ -298,7 +298,7 @@
             <div class="card-body">
               <h5 class="card-title">Zombie Runner</h5>
               <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
             </div>
           </div>
         </div>
@@ -310,7 +310,7 @@
             <div class="card-body">
               <h5 class="card-title">Zombie Runner</h5>
               <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-              <a href="#" class="read-more-btn btn btn-md btn-outline-dark">Read More</a>
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
             </div>
           </div>
         </div>
@@ -343,7 +343,7 @@
           <textarea class="form-control no-resize" name="emailBody" data-gramm_editor="false" id="email-body" placeholder="Message" rows="4"></textarea>
         </div>
         <div class="form-group">
-          <button type="submit" class="btn btn-outline-dark btn-block">Send</button>
+          <button type="submit" class="btn btn-outline-dark moon-btn btn-block">Send</button>
         </div>
       </form>
     </div>
