--- a/public/index.html
+++ b/public/index.html
@@ -325,17 +325,17 @@
         <div class="form-row">
           <div class="form-group col-sm-6 py-0">
             <label class="sr-only" for="input-first-name">First name</label>
-            <input class="form-control" name="firstName" id="input-first-name" type="text" placeholder="First Name" />
+            <input class="form-control" name="firstName" id="input-first-name" type="text" placeholder="First Name" required />
           </div>
           <div class="form-group col-sm-6 py-0">
             <label class="sr-only" for="input-last-name">Last name</label>
-            <input class="form-control" name="lastName" id="input-last-name" type="text" placeholder="Last Name" />
+            <input class="form-control" name="lastName" id="input-last-name" type="text" placeholder="Last Name" required />
           </div>
         </div>
         
         <div class="form-group">
           <label class="sr-only" for="input-email">Email address</label>
-          <input type="email" name="email" class="form-control" id="input-email" placeholder="Enter email" />
+          <input type="email" name="email" class="form-control" id="input-email" placeholder="Enter email" required />
         </div>
 
         <div class="form-group">
